--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^17.2.3",
     "ethers": "^6.15.0",
     "express": "^4.21.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "node-fetch": "^3.3.2"
   }
 }
