--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "type": "module",
   "name": "robo-futuro",
@@ -14,7 +13,7 @@
     "ethers": "^5.7.2",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "okx-api": "^1.0.0"
   }
 }
-"okx-api": "^1.0.0"
